Bug 1730570 - Clamp flex item's resolved min auto size if it's bogus. r=dholbert

This patch clamps the `resolvedMinSize` before the size is passed into
`UpdateMainMinSize`, which is where the assertion is triggered.

Also, tweak the MOZ_ASSERT a bit because it's best to test an nscoord is
not NS_UNCONSTRAINEDSIZE before invoking comparison operator.

Differential Revision: https://phabricator.services.mozilla.com/D129230